tests/NormalTests/paczka1/fuzzy1/45971242.err
Error in line 1: JyUwnE3mSCI S176 96,3
Error in line 22: Wh4IHH1n A447 -1,3
Error in line 13: Wh4IHH1n A447 68,8
Error in line 11: S276 S276 184,0
Error in line 19: m2JHjneGPC S276 83,2
Error in line 24: Wh4IHH1n A192 72,8
Error in line 21: JyUwnE3mSCI A447 45,4
Error in line 35: JyUwnE3mSCI S176 34,9
Error in line 15: 63M4 S276 425,4
